--- a/web/src/styles/main.scss
+++ b/web/src/styles/main.scss
@@ -1,11 +1,5 @@
-@import 'organisms/header';
-@import 'organisms/footer';
-
-#app {
-    font-family: Avenir, Helvetica, Arial, sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    text-align: center;
-    color: #2c3e50;
-    margin-top: 60px;
-}
+@import "../../node_modules/tailwindcss/base";
+@import "../../node_modules/tailwindcss/components";
+@import "../../node_modules/tailwindcss/utilities";
+@import './organisms/header';
+@import './organisms/footer';
